--- a/recommenderpipeline.ipynb
+++ b/recommenderpipeline.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "76aae892",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"D:\\Ravija\\Cognifyz Technologies\\Dataset .csv\")\n",
+    "df = pd.read_csv(r\"Dataset .csv\")\n",
     "df.head()"
    ]
   },
